Fix sidebar z-index bug

--- a/resources/assets/sass/pages/story/_index.scss
+++ b/resources/assets/sass/pages/story/_index.scss
@@ -39,6 +39,6 @@
     .sticky {
         position: sticky;
         top: $custom-navbar-height + 20px;
-        z-index: 100;
+        z-index: 10;
     }
 }
